syntax = "proto3";

package config_pb;
option go_package = "pb/config";

message Config {
    bytes uuid = 1;
    uint32 working_hours_start = 2;
    uint32 working_hours_end = 3;
    uint32 connection_retries = 4;
    optional bytes domains = 5;
    optional bytes hostnames = 6;
    optional bytes usernames = 7;
    string spawn_to = 8;
    optional HttpConfig http = 9;
}

message HttpConfig {
    uint32 callback_port = 1;
    uint64 killdate = 2;
    uint32 callback_jitter = 3;
    map<string, string> headers = 4;
    optional bytes aes_key = 5;
    string callback_host = 6;
    string get_uri = 7;
    string post_uri = 8;
    string query_path_name = 9;
    optional ProxyInfo proxy = 10;
    uint32 callback_interval = 11;
}

message ProxyInfo {
    string host = 1;
    uint32 port = 2;
    string pass = 3;
}
